fix: 학습자 강의 조회 및 추천 흐름 마감 정리